Update proc1 README.md